<resources>
    <!--app name-->
    <string name="app_name">Android - Core Topics</string>

    <!--menu items main-->
    <string name="intents_and_intent_filters">Intents &amp; intent filters</string>
    <string name="audio_video">Audio &amp; Video</string>
    <string name="services">Services</string>
    <string name="background_tasks">Background Tasks</string>
    <string name="permissions">Permissions</string>
    <string name="app_data_files">App data &amp; files</string>
    <string name="user_data_identity">User data &amp; identity</string>
    <string name="user_location">User location</string>
    <string name="camera">Camera</string>
    <string name="sensores">Sensores</string>
    <string name="connectivity">Connectivity</string>
    <string name="web_based_content">Web-based content</string>
    <string name="navigation">Navigation</string>
    <string name="animation_transitions">Animation &amp; transitions</string>

    <!-- Intents & intent filters -->
    <string name="explicit_intent">Explicit Intent</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="common_intents">Common Intentst</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="timer">Timer</string>
    <string name="calendar">Calendar</string>
    <string name="contacts">Contacts</string>
    <string name="email">Email</string>
    <string name="file_storage">File Storage</string>
    <string name="local_actions">Local Actions</string>
    <string name="maps">Maps</string>
    <string name="music_or_video">Music or Video</string>
    <string name="new_note">New Note</string>
    <string name="phone">Phone</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="text_messaging">Text Messaging</string>
    <string name="web_browser">Web Browser</string>

    <!--Common Contacts-->
    <string name="select_contacts">Select Contacts</string>
    <string name="view_contact">View Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="insert_contact">Insert Contact</string>


    <string name="action_not_suported">Action not suported!.</string>


</resources>