<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="24dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/intent_button_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intents_and_intent_filters" />

            <Button
                android:id="@+id/audio_video_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/audio_video" />

            <Button
                android:id="@+id/services_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/services" />

            <Button
                android:id="@+id/background_tasks_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/background_tasks" />

            <Button
                android:id="@+id/permissions_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/permissions" />

            <Button
                android:id="@+id/app_data_file_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/app_data_files" />

            <Button
                android:id="@+id/user_data_identity_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/user_data_identity" />

            <Button
                android:id="@+id/user_location_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/user_location" />

            <Button
                android:id="@+id/camera_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/camera" />

            <Button
                android:id="@+id/sensores_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/sensores" />

            <Button
                android:id="@+id/connectivity_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/connectivity" />

            <Button
                android:id="@+id/web_based_content_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/web_based_content" />

            <Button
                android:id="@+id/navigation_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/navigation" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>