<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".intent.common.ContactsActivity">

    <TextView
        android:layout_marginVertical="24dp"
        android:id="@+id/contacts_people"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="TextView" />

    <Button
        android:id="@+id/select_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_contacts" />

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/view_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_contact" />

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/edit_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_contact" />

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/insert_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_contact" />


</LinearLayout>