<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".intent.IntentsActivity">

    <Button
        android:id="@+id/explicit_intent_button_intents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explicit_intent" />

    <Button
        android:id="@+id/implicit_intent_button_intents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent" />

    <Button
        android:id="@+id/common_intents_button_intents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_intents" />


</LinearLayout>